--- a/WODKPI_CMD/App.config
+++ b/WODKPI_CMD/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="WODKPI_CMD.Properties.Settings.Out_of_StocksConnectionString"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;C:\Users\y712969\Desktop\Out of Stocks.accdb&quot;"
+            providerName="System.Data.OleDb" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
